tests/machine/x/go/group_by_having.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_having.go:52:29: cannot use func() []Result {…}() (value of type []Result) as []map[string]any value in variable declaration

1: //go:build ignore
